fix image figures alignment in file viewer

--- a/client/scss/components/editor.scss
+++ b/client/scss/components/editor.scss
@@ -100,6 +100,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: flex-start;
+	align-content: flex-start;
 
 	overflow: auto;
 	overflow-x: hidden;
